[package]
name = "aikatsu_down"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
reqwest = { version = "0.11.17", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.163", features = ["derive"] }
